[gd_scene load_steps=4 format=2]

[ext_resource path="res://GUI/Button.gd" type="Script" id=1]
[ext_resource path="res://Fonts/font.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]

size = 22
use_mipmaps = false
use_filter = false
font_data = ExtResource( 2 )

[node name="Button" type="Control"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -16.0
margin_top = -16.0
margin_right = 16.0
margin_bottom = 16.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )
_sections_unfolded = [ "Rect" ]

[node name="ColorRect" type="ColorRect" parent="." index="0"]

modulate = Color( 0.00392157, 0.156863, 0.180392, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 32.0
margin_bottom = 32.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 1, 1, 1, 1 )
_sections_unfolded = [ "Rect", "Visibility" ]

[node name="Label" type="Label" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 110.0
margin_bottom = 33.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
text = "Button"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[connection signal="gui_input" from="ColorRect" to="." method="_on_ColorRect_gui_input"]

[connection signal="mouse_entered" from="ColorRect" to="." method="_on_ColorRect_mouse_entered"]

[connection signal="mouse_exited" from="ColorRect" to="." method="_on_ColorRect_mouse_exited"]


